	as a boundary even though it is valid, even when using quoted-
	printable.

		-- \r\n
	or
		--=20\r\n

	c) Care with a valid boundary line that looks like a quoted
	printable soft line break and with MIME parts that are
	quoted-printable encoded.

		\r\n
		--=__PartF0D8505D.0__=\r\n

	The mime-eicar-test.eml is crafted to test all of these special
	cases using the mime CLI tool.


--1.71.0--

   !    Upgraded SQLite to 3.6.13; removed previous local patch.

   !	uriParse2: add support for file: scheme RFC 1738 section 3.10.

   !	uriParse2: add support for about: scheme based on comments in
   	RFC 3986 about schemes with empty scheme-info parts.

   !	dnsListQueryIP: added NULL guard to avoid spurious lookups when
   	there is no list.

   !	aclocal.m4: add 4.7 to the BDB version list.

   !	mime.c, uri.c: decouple source and decode buffer
	synchronisation. When they are synced and the content-encoding
	is Base64, then a newline in the source would flush the decode
	prematurely. Reported by Alex Broens.

   !	uri.c: Several changes for RFC 3986 which replaces RFC 2396.

   !	version.h.in.in, pdq.c: add debugging MEMSET macro to suppress
   	certain valgrind messages concerning uninitialised bytes.

   !	Updated the TLD list files.

   +	dnsList.c/h: Add dnsListLogOpen, dnsListLogClose, and dnsListLog.

   !	dnslist.c: updated dnsListQuery and dnsListQueryIP to log pass/fail
   	results to a separate file.

   +	Added BufAddSigned and BufAddUnsigned.

   !	BufAddBytes: removed offset argument, since this can be simply
   	done by adding the to pointer.

   +	Added TimeStampGMT.

   +	Added an HTTP request API.

   !	http.c, mime.c, echod.c, mimepart.c, digestbl.c, md4.c, md5.c:
	resolve many "signedness" warnings.

   !	spf.c: remove old Dns API code in favour of PDQ.

--1.70.11--

   !	mime.c: fix bug discovered through uri CLI; headers appear to be
   	parsed regardless of uri -a option. Reported by Alex Broens.

--1.70.10--
